@@ -210,6 +210,19 @@ view_search.terms=[
 },
 
 {
+	name   : "sector_vocabulary",
+	search : false,
+	filter : true,
+	codes  : [ dflat_codes["en-name"]["SectorVocabulary"], ],
+	drops  : [ "#view_search_select_sector_vocabulary" ],
+	q      : "/sector@vocabulary",
+	list   : "search_options_sector_vocabulary",
+	show   : "search_display_sector_vocabulary",
+	more   : true,
+	sort   : "value",
+},
+
+{
 	name   : "hierarchy",
 	search : false,
 	filter : true,
