@@ -1083,6 +1083,9 @@ Reporting Organisation Type
 #search_region_txt
 Recipient Region
 
+#search_sector_vocabulary_txt
+Sector Vocabulary
+
 #search_hierarchy_txt
 Hierarchy
 
