@@ -457,6 +457,11 @@
 	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_region_txt}</span>
 </div>
 
+#search_display_sector_vocabulary trim=ends
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_sector_vocabulary_txt}</span>
+</div>
+
 #search_display_hierarchy trim=ends
 <div class="search_query">
 	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_hierarchy_txt}</span>
