@@ -1,3 +1,9 @@
+Development Portal (2021-01-18 shi)
+==============================
+Search 2 update filter sector vocabulary
+Update glossary
+
+
 Development Portal (2020-09-18 shi)
 ==============================
 Search 2 update filter budget, planned disbursement and activity scope
